# Sapiens_MultiAgente

./: .dockerignore  .env.backup  .env.example  .gitignore  CLAUDE.md  DOCUMENTACAO.md  Dockerfile  INSTALL.md  PROJECT_ANALYSIS.md  README.md  REFATORACAO.md  install_sapiens.sh  publish_to_github.sh  pyproject.toml  requirements.txt  start_sapiens.py  vercel.env.example  vercel.json
.claude/commands/: check-env.md  lint-sapiens.md  start-dev.md  test-sapiens.md
.github/workflows/: ci.yml
api/: index.py
data/: relatorio_evasao_x_ingressantes_uenf_2020_2025.md  relatorio_uenf_2020_2025.md  uenf_alunos_2020_2025.csv
docs/: ANALISE_MCP.md  UI_UX_ANALYSIS.md
src/Sapiens_MultiAgente/: __init__.py  crew.py  main.py
src/Sapiens_MultiAgente/config/: agents.yaml  llm_config.yaml  llm_fallback.py  llm_settings.py  logging_config.yaml  tasks.yaml
src/Sapiens_MultiAgente/tools/: academic_logger.py  chart_generator_tool.py  csv_processor_tool.py  csv_search_tool.py  data_validation_tool.py  devops_analysis_tool.py  docx_search_tool.py  external_data_tool.py  pdf_search_tool.py  quality_review_tool.py  security_validator.py  statistical_analysis_tool.py  text_analysis_tool.py
tests/: __init__.py  conftest.py  test_analise_e2e.py  test_coverage_boost10.py  test_coverage_boost2.py  test_coverage_boost3.py  test_coverage_boost4.py  test_coverage_boost5.py  test_coverage_boost6.py  test_coverage_boost7.py  test_coverage_boost8.py  test_coverage_boost9.py  test_crew_integration.py  test_imports.py  test_main_and_web.py  test_search_tools.py  test_tools.py
(+12 files in other folders)
